# skyforge

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
crates/plugins/hetzner/: Cargo.toml
crates/plugins/hetzner/spec/: base.star  network.star
crates/plugins/hetzner/src/: bindings.rs  lib.rs
crates/plugins/hetzner/src/resources/: instance.rs
crates/sdk/skyforge-sdk/: Cargo.toml  wit
crates/sdk/skyforge-sdk-macros/: Cargo.toml
crates/sdk/skyforge-sdk-macros/src/: lib.rs
crates/sdk/skyforge-sdk/src/: lib.rs
plugins/hetzner/: Cargo.toml  wit
plugins/hetzner/config-examples/: module.star
plugins/hetzner/config-examples/base/: compute.star
plugins/hetzner/config-examples/stg/: compute.star
plugins/hetzner/src/: lib.rs
plugins/scaleway/: Cargo.toml
plugins/scaleway/src/: ffi.rs  lib.rs
plugins/scaleway/src/resources/: networking.rs
scripts/: check-wit.sh
spec/: plugins-interface.json
spec/wit/: deps.toml  skyforge.v1.wit
